# web-scraping

./: README.md  pyproject.toml  scraping.py
.cache/v/cache/: lastfailed
tests/: test_web_scraping.py
